--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -7232,6 +7232,136 @@ advantage of size over the number of scent elements is decreased significantly,
    - One can user openCV to read frames and convert them to Magick++ structures
      and them save them as GIFs (see [[https://stackoverflow.com/questions/41841553/convert-magickimage-to-cvmat][here]] and [[https://gist.github.com/AlphaNext/20a74d872505a36d514778b9b0719e92][here]])
    - [[https://www.one-tab.com/page/fuqT5AkaRZGbzBcehZlXVQ][research]]
+
+** ✔ DONE ImageMagick: Magick++
+   :LOGBOOK:
+   - State "✔ DONE"     from              [2022-02-02 qua 02:01]
+   :END:
+*** ✔ DONE Installation
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2022-02-01 ter 18:14]
+    :END:
+ [[https://imagemagick.org/script/install-source.php][src]]
+
+ #+BEGIN_EXAMPLE
+ Options used to compile and link:
+   PREFIX          = /usr/local
+   EXEC-PREFIX     = /usr/local
+   VERSION         = 7.1.0-23
+   CC              = gcc
+   CFLAGS          = -I/usr/include/libpng16  -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/harfbuzz -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/OpenEXR  -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16  -fopenmp -Wall -g -O2 -mtune=amdfam10 -fexceptions -pthread -DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16
+   CPPFLAGS        =  -DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16 
+   PCFLAGS         = 
+   DEFS            = -DHAVE_CONFIG_H
+   LDFLAGS         =  
+   LIBS            =  -ljbig  -ltiff -lfreetype  -ljpeg    -lpng16 -lz      -lfontconfig -lfreetype      -lXext    -lSM -lICE -lX11  -llzma  -lIlmImf -lImath -lHalf -lIex -lIexMath -lIlmThread -lpthread  -lpangocairo-1.0 -lpango-1.0 -lgobject-2.0 -lglib-2.0 -lharfbuzz -lcairo     -lz     -lm    -lpthread 
+   CXX             = g++
+   CXXFLAGS        =  -pthread
+   FEATURES        = DPC HDRI Cipher OpenMP
+   DELEGATES       = fontconfig freetype jbig jng jpeg lzma openexr pango png ps tiff x zlib
+ ==============================================================================
+ #+END_EXAMPLE
+*** ✔ DONE Testing
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2022-02-01 ter 18:15]
+    :END:
+ #+BEGIN_SRC bash
+ /usr/local/bin/convert logo: logo.gif
+ #+END_SRC
+
+ The =logo.gif= file should be created in the current directory.
+ - To open it use =GIMP= or the web browser.
+*** Compilation
+    #+BEGIN_SRC bash
+ c++ -O2 -o example example.cpp `Magick++-config --cppflags --cxxflags --ldflags --libs` 
+    #+END_SRC
+
+ #+BEGIN_SRC bash
+ LDFlags: -L/usr/local/lib -lMagick++-7.Q16HDRI -lMagickWand-7.Q16HDRI -lMagickCore-7.Q16HDRI
+ #+END_SRC
+
+*** ✔ DONE CMake
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2022-02-01 ter 18:58]
+    :END:
+ [[https://stackoverflow.com/a/37776099/17836786][src]]
+
+ #+BEGIN_SRC cmake
+ cmake_minimum_required(VERSION 3.5)
+ project(Blah)
+
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+ set(SOURCE_FILES main.cpp)
+
+ add_executable(Blah ${SOURCE_FILES})
+ add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
+ add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
+ find_package(ImageMagick COMPONENTS Magick++)
+ include_directories(${ImageMagick_INCLUDE_DIRS})
+ target_link_libraries(Blah ${ImageMagick_LIBRARIES})
+ #+END_SRC
+
+ *Adapted*:
+ #+BEGIN_SRC cmake
+ cmake_minimum_required(VERSION 3.5)
+
+ project(test)
+
+ set(CMAKE_CXX_STANDARD 11)
+ set(CMAKE_CXX_STANDARD_REQUIRED ON)
+ #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+ # get LDFLAGS
+ find_program(MAGICK_CONFIG "Magick++-config")
+ execute_process(COMMAND "${MAGICK_CONFIG}" "--libs" OUTPUT_VARIABLE MAGICK_LD_FLAGS)
+ # Remove trailing whitespace (CMAKE warns about this)
+ string(STRIP "${MAGICK_LD_FLAGS}" MAGICK_LD_FLAGS)
+ message("LDFlags: ${MAGICK_LD_FLAGS}")
+
+ set(SOURCE_FILES readImages.cpp)
+
+ # ImageMagick++
+ add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+ add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
+ add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
+ find_package(ImageMagick COMPONENTS Magick++)
+ include_directories(${ImageMagick_INCLUDE_DIRS})
+ target_link_libraries(${PROJECT_NAME} ${MAGICK_LD_FLAGS} ${ImageMagick_LIBRARIES})
+
+ #+END_SRC
+
+*** GIFs
+**** ✔ DONE Download
+     :LOGBOOK:
+     - State "✔ DONE"     from              [2022-02-01 ter 18:19]
+     :END:
+***** ✘ CANCELED Giphy
+      :LOGBOOK:
+      - State "✘ CANCELED" from              [2022-02-01 ter 19:56] \\
+	It corrupted the file.
+      :END:
+ 1) Go to https://giphy.com/categories/memes
+ 2) Select a GIF
+ 3) Right-Click over it and select =Open Image in New Tab=
+ 4) Go to the new tab
+ 5) Right-Click over the image and select =Save Image as=
+ 6) Save the file with the =.gif= extension
+***** ✔ DONE Gifer
+      :LOGBOOK:
+      - State "✔ DONE"     from              [2022-02-01 ter 19:57]
+      :END:
+ 1. Go to https://gifer.com
+ 2. Select a gif
+ 3. Press the download button
+**** Open
+ 1) Just drag and drop the =.gif= file into a Firefox browser tab.
+*** Usage
+ [[http://www.imagemagick.org/Magick++/tutorial/Magick++_tutorial.pdf][src]]
+**** Example program
+ [[file:code/imagemagick++][src]]
+**** Reproduce GIF
+ https://evileg.com/en/post/266/
 * Qt                                                               :noexport:
 ** ✔ DONE Installation
    :LOGBOOK:
@@ -7789,7 +7919,10 @@ while (video.isOpened())
 	    3) =KeepAspectRatioByExpanding=
 9) Example using =copyMakeBorder= process ([[https://amin-ahmadi.com/2018/03/29/how-to-read-process-and-display-videos-using-qt-and-opencv/][src]]):
    1) it mirrors multiple images to fill the view
-* Twitter sharing
+* ✔ DONE Twitter sharing
+  :LOGBOOK:
+  - State "✔ DONE"     from              [2022-02-02 qua 12:50]
+  :END:
 ** ✔ DONE Account
    :PROPERTIES:
    :ATTACH_DIR: /home/zmpl/OneDrive-UM/Univ/MI_Electro/Sem7/SEC/2021-22/repo/Proj/sec/img/
@@ -8490,135 +8623,79 @@ https://upload.twitter.com/1.1/media/upload.json?command=APPEND&media_id=123&seg
   }
   #+END_SRC
 
-* ✔ DONE ImageMagick: Magick++
-  :LOGBOOK:
-  - State "✔ DONE"     from              [2022-02-02 qua 02:01]
-  :END:
-** ✔ DONE Installation
-   :LOGBOOK:
-   - State "✔ DONE"     from              [2022-02-01 ter 18:14]
-   :END:
-[[https://imagemagick.org/script/install-source.php][src]]
+* Video Reproduction with Audio in Qt
+** Examples
+*** VideoGraphicsItem
+[[file:code/video/videographicsitem][src]]
 
-#+BEGIN_EXAMPLE
-Options used to compile and link:
-  PREFIX          = /usr/local
-  EXEC-PREFIX     = /usr/local
-  VERSION         = 7.1.0-23
-  CC              = gcc
-  CFLAGS          = -I/usr/include/libpng16  -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/harfbuzz -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/OpenEXR  -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16  -fopenmp -Wall -g -O2 -mtune=amdfam10 -fexceptions -pthread -DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16
-  CPPFLAGS        =  -DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16 
-  PCFLAGS         = 
-  DEFS            = -DHAVE_CONFIG_H
-  LDFLAGS         =  
-  LIBS            =  -ljbig  -ltiff -lfreetype  -ljpeg    -lpng16 -lz      -lfontconfig -lfreetype      -lXext    -lSM -lICE -lX11  -llzma  -lIlmImf -lImath -lHalf -lIex -lIexMath -lIlmThread -lpthread  -lpangocairo-1.0 -lpango-1.0 -lgobject-2.0 -lglib-2.0 -lharfbuzz -lcairo     -lz     -lm    -lpthread 
-  CXX             = g++
-  CXXFLAGS        =  -pthread
-  FEATURES        = DPC HDRI Cipher OpenMP
-  DELEGATES       = fontconfig freetype jbig jng jpeg lzma openexr pango png ps tiff x zlib
-==============================================================================
-#+END_EXAMPLE
-** ✔ DONE Testing
-   :LOGBOOK:
-   - State "✔ DONE"     from              [2022-02-01 ter 18:15]
-   :END:
-#+BEGIN_SRC bash
-/usr/local/bin/convert logo: logo.gif
-#+END_SRC
+*Steps*:
+1) Setup:
+   1) Header file
+      #+BEGIN_SRC c++
+      #include <QMediaPlayer>
+      #include <QWidget>
 
-The =logo.gif= file should be created in the current directory.
-- To open it use =GIMP= or the web browser.
-** Compilation
-   #+BEGIN_SRC bash
-c++ -O2 -o example example.cpp `Magick++-config --cppflags --cxxflags --ldflags --libs` 
+      //QT_BEGIN_NAMESPACE
+      //class QGraphicsVideoItem;
+      //QT_END_NAMESPACE
+
+      private:
+      QMediaPlayer *m_mediaPlayer = nullptr;
+      QGraphicsVideoItem *m_videoItem = nullptr;
+      #+END_SRC
+
+   2) [[file:code/video/videographicsitem/CMakeLists.txt][CMakeLists.txt]]
+      #+BEGIN_SRC cmake
+      find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets VirtualKeyboard Multimedia MultimediaWidgets REQUIRED)
+      find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets VirtualKeyboard Multimedia MultimediaWidgets REQUIRED)
+
+      target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::VirtualKeyboard Qt${QT_VERSION_MAJOR}::Multimedia Qt${QT_VERSION_MAJOR}::MultimediaWidgets)
+      
+      #+END_SRC
+2) Create a Media player object
+   #+BEGIN_SRC c++ 
+    m_mediaPlayer = new QMediaPlayer(this, QMediaPlayer::VideoSurface);
+   #+END_SRC
+3) Create a new =QGraphicsVideoItem= and sets its size
+   #+BEGIN_SRC c++ 
+    const QRect screenGeometry =
+        QApplication::desktop()->screenGeometry(this);
+    m_videoItem = new QGraphicsVideoItem;
+    m_videoItem->setSize(
+        QSizeF(screenGeometry.width() / 3, screenGeometry.height() / 2));
+   #+END_SRC
+4) Create a =QGraphicsScene= and =QGraphicsView= and add the
+   =QGraphicsVideoItem= to the scene
+   #+BEGIN_SRC c++
+    QGraphicsScene *scene = new QGraphicsScene(this);
+    QGraphicsView *graphicsView = new QGraphicsView(scene);
+
+    scene->addItem(m_videoItem);
+   #+END_SRC
+5) Set the video output from media player into =QGraphicsVideoItem=
+   #+BEGIN_SRC c++
+    m_mediaPlayer->setVideoOutput(m_videoItem);
+   #+END_SRC
+6) Open file and check for available media file types
+   #+BEGIN_SRC c++
+    QFileDialog fileDialog(this);
+    fileDialog.setAcceptMode(QFileDialog::AcceptOpen);
+    fileDialog.setWindowTitle(tr("Open Movie"));
+    const QStringList supportedMimeTypes = m_mediaPlayer->supportedMimeTypes();
+    if (!supportedMimeTypes.isEmpty())
+        fileDialog.setMimeTypeFilters(supportedMimeTypes);
+    fileDialog.setDirectory(QStandardPaths::standardLocations(QStandardPaths::MoviesLocation).value(0, QDir::homePath()));
+    if (fileDialog.exec() == QDialog::Accepted)
+        load(fileDialog.selectedUrls().constFirst());
+   #+END_SRC
+7) Play and stop video
+   #+BEGIN_SRC 
+   m_mediaPlayer->pause();
+   m_mediaPlayer->play();
    #+END_SRC
 
-#+BEGIN_SRC bash
-LDFlags: -L/usr/local/lib -lMagick++-7.Q16HDRI -lMagickWand-7.Q16HDRI -lMagickCore-7.Q16HDRI
-#+END_SRC
 
-** ✔ DONE CMake
-   :LOGBOOK:
-   - State "✔ DONE"     from              [2022-02-01 ter 18:58]
-   :END:
-[[https://stackoverflow.com/a/37776099/17836786][src]]
 
-#+BEGIN_SRC cmake
-cmake_minimum_required(VERSION 3.5)
-project(Blah)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-set(SOURCE_FILES main.cpp)
-
-add_executable(Blah ${SOURCE_FILES})
-add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
-add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
-find_package(ImageMagick COMPONENTS Magick++)
-include_directories(${ImageMagick_INCLUDE_DIRS})
-target_link_libraries(Blah ${ImageMagick_LIBRARIES})
-#+END_SRC
-
-*Adapted*:
-#+BEGIN_SRC cmake
-cmake_minimum_required(VERSION 3.5)
-
-project(test)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-# get LDFLAGS
-find_program(MAGICK_CONFIG "Magick++-config")
-execute_process(COMMAND "${MAGICK_CONFIG}" "--libs" OUTPUT_VARIABLE MAGICK_LD_FLAGS)
-# Remove trailing whitespace (CMAKE warns about this)
-string(STRIP "${MAGICK_LD_FLAGS}" MAGICK_LD_FLAGS)
-message("LDFlags: ${MAGICK_LD_FLAGS}")
-
-set(SOURCE_FILES readImages.cpp)
-
-# ImageMagick++
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
-add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
-find_package(ImageMagick COMPONENTS Magick++)
-include_directories(${ImageMagick_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${MAGICK_LD_FLAGS} ${ImageMagick_LIBRARIES})
-
-#+END_SRC
-
-** GIFs
-*** ✔ DONE Download
-    :LOGBOOK:
-    - State "✔ DONE"     from              [2022-02-01 ter 18:19]
-    :END:
-**** ✘ CANCELED Giphy
-     :LOGBOOK:
-     - State "✘ CANCELED" from              [2022-02-01 ter 19:56] \\
-       It corrupted the file.
-     :END:
-1) Go to https://giphy.com/categories/memes
-2) Select a GIF
-3) Right-Click over it and select =Open Image in New Tab=
-4) Go to the new tab
-5) Right-Click over the image and select =Save Image as=
-6) Save the file with the =.gif= extension
-**** ✔ DONE Gifer
-     :LOGBOOK:
-     - State "✔ DONE"     from              [2022-02-01 ter 19:57]
-     :END:
-1. Go to https://gifer.com
-2. Select a gif
-3. Press the download button
-*** Open
-1) Just drag and drop the =.gif= file into a Firefox browser tab.
-** Usage
-[[http://www.imagemagick.org/Magick++/tutorial/Magick++_tutorial.pdf][src]]
-*** Example program
-[[file:code/imagemagick++][src]]
-*** Reproduce GIF
-https://evileg.com/en/post/266/
 * Mine                                                             :noexport:
 ** Implementation
 *** Project: LS App
@@ -9232,5 +9309,6 @@ OpenCV provides an API for linear blending of two images. The calculation formul
 	 3) Animate images
 	 4) Write images to file
 9) [ ] Reproduce video with audio
+   1) 
 10) [ ] Implement client-server architecture
 
